<?xml version="1.0" encoding="utf-8"?>
    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start"
        tools:context=".MainActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    android:elevation="4dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

                <!-- for buttons-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/shuffle_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/shuffle"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:drawableTop="@drawable/shuffle_icon"
                        android:text="@string/shuffle"
                        android:textColor="@color/black"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/favorites_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/favorites"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:drawableTop="@drawable/favorites_icon"
                        android:text="@string/favorites"
                        android:textColor="@color/black"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/playlist_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/playlist"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:drawableTop="@drawable/playlist_icon"
                        android:text="@string/playlist"
                        android:textColor="@color/black"
                        android:textAllCaps="false"/>

                </LinearLayout>
                <TextView
                    android:id="@+id/totalSongs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_songs"
                    android:textStyle="bold"
                    android:layout_margin="10dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/musicRV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical"
                    android:scrollbarThumbVertical="@drawable/scroll_bar_icon"/>
            </LinearLayout>
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/nowPlaying"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:name="com.example.musicplayerappkotlin.NowPlaying"
                tools:layout="@layout/fragment_now_playing"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/nav_menu"/>

    </androidx.drawerlayout.widget.DrawerLayout>


